i think i got it working

--- a/output/genOutput.html
+++ b/output/genOutput.html
@@ -17,7 +17,7 @@
       <div class="row">
         <div
           class="col-12 jumbotron mb-3 team-heading"
-          style="background-color: cornflowerblue"
+          style="background-color: rgb(244, 5, 5); border-style: solid; border-width: 5px;"
         >
           <h1 class="text-center">King & Queen Public Schools Employees</h1>
         </div>
@@ -28,14 +28,37 @@
         <div class="team-area col-12 d-flex justify-content-center">
           <div class="card employee-card" style="background-color: grey">
     <div class="card-header">
-      <h2 class="card-title">mr T</h2>
+      <h2 class="card-title">kyle2</h2>
+      <h3 class="card-title">Administrator</h3>
+    </div>
+    <div class="card-body">
+      <ul class="list-group">
+        <li class="list-group-item">ID: 2345</li>
+        <li class="list-group-item">
+          Email: <a href="mailto:345@gmail.com">345@gmail.com</a>
+        </li>
+        <li class="list-group-item">
+          GitHub:
+          <a
+            href="https://github.com/undefined"
+            target="_blank"
+            rel="noopener noreferrer"
+            >undefined</a
+          >
+        </li>
+      </ul>
+    </div>
+  </div>
+  <div class="card employee-card" style="background-color: grey">
+    <div class="card-header">
+      <h2 class="card-title">kyle3</h2>
       <h3 class="card-title">Teacher</h3>
     </div>
     <div class="card-body">
       <ul class="list-group">
-        <li class="list-group-item">ID: 7577551016</li>
+        <li class="list-group-item">ID: 23456</li>
         <li class="list-group-item">
-          Email: <a href="mailto:kyle@gmail.com">kyle@gmail.com</a>
+          Email: <a href="mailto:3345@gmail.com">3345@gmail.com</a>
         </li>
         <li class="list-group-item">School: central</li>
       </ul>
