--- a/src/employee.html
+++ b/src/employee.html
@@ -17,7 +17,7 @@
       <div class="row">
         <div
           class="col-12 jumbotron mb-3 team-heading"
-          style="background-color: cornflowerblue"
+          style="background-color: rgb(244, 5, 5); border-style: solid; border-width: 5px;"
         >
           <h1 class="text-center">King & Queen Public Schools Employees</h1>
         </div>
