--- a/output/genOutput.html
+++ b/output/genOutput.html
@@ -26,16 +26,16 @@
     <div class="container">
       <div class="row">
         <div class="team-area col-12 d-flex justify-content-center">
-          <div class="card employee-card" style="background-color: grey">
-    <div class="card-header">
-      <h2 class="card-title">kyle2</h2>
+          <div class="card employee-card" style="background-color: rgb(247, 184, 49); border-style: solid; border-width: 5px; ">
+  <div class="card-header">
+      <h2 class="card-title">test 2 </h2>
       <h3 class="card-title">Administrator</h3>
     </div>
     <div class="card-body">
       <ul class="list-group">
-        <li class="list-group-item">ID: 2345</li>
+        <li class="list-group-item">Contact Number: 345</li>
         <li class="list-group-item">
-          Email: <a href="mailto:345@gmail.com">345@gmail.com</a>
+          Email: <a href="mailto:test@gmail.com">test@gmail.com</a>
         </li>
         <li class="list-group-item">
           GitHub:
@@ -49,18 +49,18 @@
       </ul>
     </div>
   </div>
-  <div class="card employee-card" style="background-color: grey">
-    <div class="card-header">
-      <h2 class="card-title">kyle3</h2>
+  <div class="card employee-card" style="background-color: rgb(247, 184, 49); border-style: solid; border-width: 5px; ">
+  <div class="card-header">
+      <h2 class="card-title">test 3 </h2>
       <h3 class="card-title">Teacher</h3>
     </div>
     <div class="card-body">
       <ul class="list-group">
-        <li class="list-group-item">ID: 23456</li>
+        <li class="list-group-item">Contact Number: 345</li>
         <li class="list-group-item">
-          Email: <a href="mailto:3345@gmail.com">3345@gmail.com</a>
+          Email: <a href="mailto:asfs@gmail.com">asfs@gmail.com</a>
         </li>
-        <li class="list-group-item">School: central</li>
+        <li class="list-group-item">School: centreal</li>
       </ul>
     </div>
   </div>
