--- a/src/leadMember.html
+++ b/src/leadMember.html
@@ -1,11 +1,11 @@
-<div class="card employee-card" style="background-color: grey">
+<div class="card employee-card" style="background-color: rgb(247, 184, 49); border-style: solid; border-width: 5px; ">
     <div class="card-header">
       <h2 class="card-title">{{ name }}</h2>
       <h3 class="card-title">{{ role }}</h3>
     </div>
     <div class="card-body">
       <ul class="list-group">
-        <li class="list-group-item">ID: {{ id }}</li>
+        <li class="list-group-item">Contact Number: {{ id }}</li>
         <li class="list-group-item">
           Email: <a href="mailto:{{ email }}">{{ email }}</a>
         </li>
