--- a/output/genOutput.html
+++ b/output/genOutput.html
@@ -12,12 +12,12 @@
     />
     <title>King & Queen Public Schools Employees</title>
   </head>
-  <body>
+  <body style="background-image: url(/background.png);background-repeat: no-repeat; background-size: cover;">
     <div class="container-fluid">
       <div class="row">
         <div
           class="col-12 jumbotron mb-3 team-heading"
-          style="background-color: rgb(244, 5, 5); border-style: solid; border-width: 5px;"
+          style="background-color: rgb(244, 5, 5); border-style: solid; border-width: 5px; "
         >
           <h1 class="text-center">King & Queen Public Schools Employees</h1>
         </div>
@@ -26,16 +26,16 @@
     <div class="container">
       <div class="row">
         <div class="team-area col-12 d-flex justify-content-center">
-          <div class="card employee-card" style="background-color: rgb(247, 184, 49); border-style: solid; border-width: 5px; ">
+          <div class="card employee-card" style="background-color: rgb(247, 184, 49); border-style: solid; border-width: 5px; border-color: red; ">
   <div class="card-header">
-      <h2 class="card-title">test 2 </h2>
+      <h2 class="card-title">mr t</h2>
       <h3 class="card-title">Administrator</h3>
     </div>
     <div class="card-body">
       <ul class="list-group">
-        <li class="list-group-item">Contact Number: 345</li>
+        <li class="list-group-item">Contact Number: 34534</li>
         <li class="list-group-item">
-          Email: <a href="mailto:test@gmail.com">test@gmail.com</a>
+          Email: <a href="mailto:2345345@gmail.com">2345345@gmail.com</a>
         </li>
         <li class="list-group-item">
           GitHub:
@@ -49,18 +49,18 @@
       </ul>
     </div>
   </div>
-  <div class="card employee-card" style="background-color: rgb(247, 184, 49); border-style: solid; border-width: 5px; ">
+  <div class="card employee-card" style="background-color: rgb(247, 184, 49); border-style: solid; border-width: 5px; border-color: red; ">
   <div class="card-header">
-      <h2 class="card-title">test 3 </h2>
+      <h2 class="card-title">mr t teacher</h2>
       <h3 class="card-title">Teacher</h3>
     </div>
     <div class="card-body">
       <ul class="list-group">
-        <li class="list-group-item">Contact Number: 345</li>
+        <li class="list-group-item">Contact Number: 53453535</li>
         <li class="list-group-item">
-          Email: <a href="mailto:asfs@gmail.com">asfs@gmail.com</a>
+          Email: <a href="mailto:asfas@gmail.com">asfas@gmail.com</a>
         </li>
-        <li class="list-group-item">School: centreal</li>
+        <li class="list-group-item">School: central</li>
       </ul>
     </div>
   </div>
