--- a/src/employee.html
+++ b/src/employee.html
@@ -12,12 +12,12 @@
     />
     <title>King & Queen Public Schools Employees</title>
   </head>
-  <body>
+  <body style="background-image: url(/background.png);background-repeat: no-repeat; background-size: cover;">
     <div class="container-fluid">
       <div class="row">
         <div
           class="col-12 jumbotron mb-3 team-heading"
-          style="background-color: rgb(244, 5, 5); border-style: solid; border-width: 5px;"
+          style="background-color: rgb(244, 5, 5); border-style: solid; border-width: 5px; "
         >
           <h1 class="text-center">King & Queen Public Schools Employees</h1>
         </div>
