--- a/src/leadMember.html
+++ b/src/leadMember.html
@@ -1,5 +1,5 @@
-<div class="card employee-card" style="background-color: rgb(247, 184, 49); border-style: solid; border-width: 5px; ">
-    <div class="card-header">
+<div class="card employee-card" style="background-color: rgb(247, 184, 49); border-style: solid; border-width: 5px; border-color: red; ">
+<div class="card-header">
       <h2 class="card-title">{{ name }}</h2>
       <h3 class="card-title">{{ role }}</h3>
     </div>
