--- a/output/genOutput.html
+++ b/output/genOutput.html
@@ -28,14 +28,14 @@
         <div class="team-area col-12 d-flex justify-content-center">
           <div class="card employee-card" style="background-color: rgb(247, 184, 49); border-style: solid; border-width: 5px; border-color: red; ">
   <div class="card-header">
-      <h2 class="card-title">mr t</h2>
+      <h2 class="card-title">kyle</h2>
       <h3 class="card-title">Administrator</h3>
     </div>
     <div class="card-body">
       <ul class="list-group">
-        <li class="list-group-item">Contact Number: 34534</li>
+        <li class="list-group-item">Contact Number: 7577571019</li>
         <li class="list-group-item">
-          Email: <a href="mailto:2345345@gmail.com">2345345@gmail.com</a>
+          Email: <a href="mailto:kyle@gmail.com">kyle@gmail.com</a>
         </li>
         <li class="list-group-item">
           GitHub:
@@ -51,16 +51,16 @@
   </div>
   <div class="card employee-card" style="background-color: rgb(247, 184, 49); border-style: solid; border-width: 5px; border-color: red; ">
   <div class="card-header">
-      <h2 class="card-title">mr t teacher</h2>
+      <h2 class="card-title">spencer</h2>
       <h3 class="card-title">Teacher</h3>
     </div>
     <div class="card-body">
       <ul class="list-group">
-        <li class="list-group-item">Contact Number: 53453535</li>
+        <li class="list-group-item">Contact Number: 5454545676</li>
         <li class="list-group-item">
-          Email: <a href="mailto:asfas@gmail.com">asfas@gmail.com</a>
+          Email: <a href="mailto:spencer@gmail.com">spencer@gmail.com</a>
         </li>
-        <li class="list-group-item">School: central</li>
+        <li class="list-group-item">School: Central</li>
       </ul>
     </div>
   </div>
