--- a/output/genOutput.html
+++ b/output/genOutput.html
@@ -27,15 +27,30 @@
       <div class="row">
         <div class="team-area col-12 d-flex justify-content-center">
           <div class="card employee-card" style="background-color: rgb(247, 184, 49); border-style: solid; border-width: 5px; border-color: red; ">
+<div class="card-header">
+      <h2 class="card-title">sfs</h2>
+      <h3 class="card-title">leadMember</h3>
+    </div>
+    <div class="card-body">
+      <ul class="list-group">
+        <li class="list-group-item">Contact Number: 34636</li>
+        <li class="list-group-item">
+          Email: <a href="mailto:sdfsf@gmail.com">sdfsf@gmail.com</a>
+        </li>
+        <li class="list-group-item">Office number: {{ officeNumber }}</li>
+      </ul>
+    </div>
+  </div>
+  <div class="card employee-card" style="background-color: rgb(247, 184, 49); border-style: solid; border-width: 5px; border-color: red; ">
   <div class="card-header">
-      <h2 class="card-title">reyn</h2>
+      <h2 class="card-title">sdfasf</h2>
       <h3 class="card-title">Administrator</h3>
     </div>
     <div class="card-body">
       <ul class="list-group">
-        <li class="list-group-item">Contact Number: 24353</li>
+        <li class="list-group-item">Contact Number: 435534</li>
         <li class="list-group-item">
-          Email: <a href="mailto:sdfs@gmail.com">sdfs@gmail.com</a>
+          Email: <a href="mailto:safasf@gmail.com">safasf@gmail.com</a>
         </li>
         <li class="list-group-item">
           GitHub:
@@ -51,14 +66,14 @@
   </div>
   <div class="card employee-card" style="background-color: rgb(247, 184, 49); border-style: solid; border-width: 5px; border-color: red; ">
   <div class="card-header">
-      <h2 class="card-title">mr T</h2>
+      <h2 class="card-title">Mr. T</h2>
       <h3 class="card-title">Teacher</h3>
     </div>
     <div class="card-body">
       <ul class="list-group">
-        <li class="list-group-item">Contact Number: 23525423423</li>
+        <li class="list-group-item">Contact Number: 7577551016</li>
         <li class="list-group-item">
-          Email: <a href="mailto:kyle@gmail.com">kyle@gmail.com</a>
+          Email: <a href="mailto:kyletalbott69@gmail.com">kyletalbott69@gmail.com</a>
         </li>
         <li class="list-group-item">School: central</li>
       </ul>
