--- a/output/genOutput.html
+++ b/output/genOutput.html
@@ -28,14 +28,14 @@
         <div class="team-area col-12 d-flex justify-content-center">
           <div class="card employee-card" style="background-color: rgb(247, 184, 49); border-style: solid; border-width: 5px; border-color: red; ">
 <div class="card-header">
-      <h2 class="card-title">Alex</h2>
+      <h2 class="card-title">kyle </h2>
       <h3 class="card-title">leadMember</h3>
     </div>
     <div class="card-body">
       <ul class="list-group">
         <li class="list-group-item">Contact Number: 1231231235</li>
         <li class="list-group-item">
-          Email: <a href="mailto:alex@gmail.com">alex@gmail.com</a>
+          Email: <a href="mailto:test@gmail.com">test@gmail.com</a>
         </li>
         <li class="list-group-item">Office number: {{ officeNumber }}</li>
       </ul>
@@ -43,14 +43,14 @@
   </div>
   <div class="card employee-card" style="background-color: rgb(247, 184, 49); border-style: solid; border-width: 5px; border-color: red; ">
   <div class="card-header">
-      <h2 class="card-title">json</h2>
+      <h2 class="card-title">admin test</h2>
       <h3 class="card-title">Administrator</h3>
     </div>
     <div class="card-body">
       <ul class="list-group">
         <li class="list-group-item">Contact Number: 1231231235</li>
         <li class="list-group-item">
-          Email: <a href="mailto:json@gmail.com">json@gmail.com</a>
+          Email: <a href="mailto:admin@gmail.com">admin@gmail.com</a>
         </li>
         <li class="list-group-item">
           GitHub:
@@ -66,29 +66,14 @@
   </div>
   <div class="card employee-card" style="background-color: rgb(247, 184, 49); border-style: solid; border-width: 5px; border-color: red; ">
   <div class="card-header">
-      <h2 class="card-title">Mr. Talbott</h2>
+      <h2 class="card-title">Mr.T</h2>
       <h3 class="card-title">Teacher</h3>
     </div>
     <div class="card-body">
       <ul class="list-group">
         <li class="list-group-item">Contact Number: 1231231235</li>
         <li class="list-group-item">
-          Email: <a href="mailto:mr.T@gmail.com">mr.T@gmail.com</a>
-        </li>
-        <li class="list-group-item">School: central</li>
-      </ul>
-    </div>
-  </div>
-  <div class="card employee-card" style="background-color: rgb(247, 184, 49); border-style: solid; border-width: 5px; border-color: red; ">
-  <div class="card-header">
-      <h2 class="card-title">mr.T #2 </h2>
-      <h3 class="card-title">Teacher</h3>
-    </div>
-    <div class="card-body">
-      <ul class="list-group">
-        <li class="list-group-item">Contact Number: 123123123512</li>
-        <li class="list-group-item">
-          Email: <a href="mailto:kyle#2@gmail.com">kyle#2@gmail.com</a>
+          Email: <a href="mailto:mrt@gmail.com">mrt@gmail.com</a>
         </li>
         <li class="list-group-item">School: central</li>
       </ul>
